fix horizontal scroll bug

--- a/tarefa6/css/styles.css
+++ b/tarefa6/css/styles.css
@@ -6,6 +6,11 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+html {
+    overflow-y: overlay;
+    scroll-behavior: smooth;
+}
+
 body {   
     margin: 0 auto;
 }
@@ -119,7 +124,7 @@ container {
 /* video section */
 
 .container-video {
-    width: 100%;
+    max-width: 100vw;
     position: relative;
     margin-top:60px;
 }
